不友好的代码防范