@@ -3,17 +3,21 @@ package com.yyoj.yyojcodesandbox;
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.lang.UUID;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.FoundWord;
+import cn.hutool.dfa.WordTree;
 import com.yyoj.yyojcodesandbox.enums.ExecuteCodeStatusEnum;
 import com.yyoj.yyojcodesandbox.model.ExecuteCodeRequest;
 import com.yyoj.yyojcodesandbox.model.ExecuteCodeResponse;
 import com.yyoj.yyojcodesandbox.model.ExecuteMessage;
 import com.yyoj.yyojcodesandbox.model.JudgeInfo;
+import com.yyoj.yyojcodesandbox.security.MySecurityManager;
 import com.yyoj.yyojcodesandbox.utils.ProcessUtils;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class JavaNativeCodeSandbox implements CodeSandbox {
@@ -22,11 +26,38 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
 
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
 
+    // 设置程序的超时时间
+    private static final int TIMEOUT = 10000;
+
+    // 程序代码的黑名单
+    private static final List<String> BLACK_LIST = Arrays.asList("File", "exec");
+
+    private static final WordTree WORD_TREE = new WordTree();
+
+    // 安全管理类路径
+    private static final String SECURITY_MANAGER_CLASS_NAME = "D:\\learn\\oj\\yyoj-codesandbox\\src\\main\\resources\\security";
+
+    // 安全管理类名称
+    private static final String SECURITY_MANAGER_NAME = "MySecurityManager";
+
+    static {
+        // 黑名单初始化
+        WORD_TREE.addWords(BLACK_LIST);
+    }
 
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest request) {
+//        // 设置系统的SecurityManager
+//        System.setSecurityManager(new MySecurityManager());
         String code = request.getCode();
         List<String> inputList = request.getInput();
+
+        // 检查代码中是否包含黑名单中的关键字
+        FoundWord foundWord = WORD_TREE.matchWord(code);
+        if (foundWord != null) {
+            System.out.println("检测到非法关键字: " + foundWord.getFoundWord());
+            return null;
+        }
 
         String userDir = System.getProperty("user.dir");
 
@@ -63,9 +94,23 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
 
         // 执行代码，得到输出结果
         for (String inputArgs : inputList) {
-            String runCommand = String.format("java -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+            // 手动限制Java最大堆内存
+//            String runCommand = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+
+            String runCommand = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath, SECURITY_MANAGER_CLASS_NAME, SECURITY_MANAGER_NAME, inputArgs);
+
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCommand);
+                // 守护线程
+                new Thread(() -> {
+                    try {
+                        Thread.sleep(TIMEOUT);
+                        // 超时中断执行
+                        if (runProcess.isAlive()) runProcess.destroy();
+                    } catch (InterruptedException e) {
+                        throw new RuntimeException(e);
+                    }
+                }).start();
 
                 ExecuteMessage runMessage = ProcessUtils.executeAndGetMessage(runProcess, "运行");
 
